@@ -1,5 +1,6 @@
-package com.example.demo.support;
+package com.example.demo.support.exception;
 
+import com.example.demo.support.ApiResponse;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
@@ -17,7 +18,7 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(BindException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ApiResponse<Object> bindException(BindException e) {
-        String message = e.getBindingResult().getAllErrors().get(0).getDefaultMessage();
+        String message = e.getBindingResult().getAllErrors().getFirst().getDefaultMessage();
         String fullMessages = e.getBindingResult().getAllErrors().stream()
                 .map(DefaultMessageSourceResolvable::getDefaultMessage)
                 .collect(Collectors.joining(", "));
@@ -45,6 +46,15 @@ public class GlobalExceptionHandler {
         return ApiResponse.fail(
                 HttpStatus.INTERNAL_SERVER_ERROR.value(),
                 "예기치 못한 오류가 발생했습니다."
+        );
+    }
+
+    @ExceptionHandler(TooManyRequestsException.class)
+    @ResponseStatus(HttpStatus.TOO_MANY_REQUESTS) // 429
+    public ApiResponse<Object> handleTooManyRequests(TooManyRequestsException e) {
+        return ApiResponse.fail(
+                HttpStatus.TOO_MANY_REQUESTS.value(),
+                e.getMessage()
         );
     }
 
